--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,33 +8,67 @@
 #caja1 {
     width: 100%;
     height: 100%;
+    background-color: #d8342b;
     overflow: hidden;
     position: absolute;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: flex-start;
 
-    background-color: #d8342b;
+}
+#franjaAzul{
+    background-color: #245da8;
+    height: 3%;
+    width: 100%;
+    position: absolute;
+}
+#franjaAzulinferior{
+    background-color: #245da8;
+    height: 3%;
+    width: 100%;
+    position: absolute;
+
+    top: 97%;
+
+
 }
 #adorno{
-    position: absolute;
-    float:left;
-}
-#adorno2{
+    width: 20%;
+
+    margin-top: 3%;
     position: absolute;
 
-    float: right;
+    left: 80%;
+
+
+}
+#adorno img{
+    width: 100%;
+}
+#adorno2 {
+    width: 20%;
+    position: absolute;
+    margin-top: 3%;
+    right: 80%;
+
+
+}
+#adorno2 img{
+    width: 100%;
 }
 #caja2{
     width: 60%;
     height: auto;
     margin: 3% 20%;
     position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
     border: 1px solid black;
     border-radius: 20px 20px;
+
 }
 #caja2 img{
+
     width: 100%;
     height: 100%;
     border-radius: 20px 20px;
@@ -45,6 +79,8 @@
     width: 1000px;
     height: 200px;
     border: 1px solid black;
+
+
 }
 #contenedor1{
     width: 900px;
