--- a/css/estiloPorcentajes.css
+++ b/css/estiloPorcentajes.css
@@ -19,6 +19,7 @@ html{
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: flex-start;
+    visibility: visible;
 
 }
 #franjaAzul{
@@ -76,6 +77,44 @@ html{
     height: 100%;
     border-radius: 20px 20px;
 }
+#boton{
+    position: absolute;
+    top: 87vh;
+}
+a {
+    text-decoration:none;
+    color:#FFF;
+}
+.rainbow-button {
+    width:calc(10vw + 3px);
+    height:calc(4vw + 3px);
+    background-image: linear-gradient(90deg, #00C0FF 0%, #FFCF00 49%, #FC4F4F 80%, #00C0FF 100%);
+    border-radius:5px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-transform:uppercase;
+    font-size:1.5vw;
+    font-weight:bold;
+}
+.rainbow-button:after {
+    content:attr(alt);
+    width:10vw;
+    height:4vw;
+    background-color:#191919;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.rainbow-button:hover {
+    animation:slidebg 2s linear infinite;
+}
+
+@keyframes slidebg {
+    to {
+        background-position:10vw;
+    }
+}
 
 /*
 La cabecera ocupa todo el ancho de la pagina
@@ -83,18 +122,21 @@ que son 1000px y pasara a ser el 100%
 el alto son 200pixeles que es lo que ocupa la imagen de alto
 
  */
+#main{
+    display: none;
+}
 #cabecera{
     width: 100%;
     height: 20.83rem;
     border-color:black;
     border-width: 1px 0px;
     border-style: solid;
-
+    display: none;
 
 }
 #contenedorExterno1{
     width: 90%;
-    height: 62.5rem;
+    height: 100vh;
     border-color:black;
     border-width: 1px 0px;
     border-style: solid;
@@ -118,7 +160,7 @@ el alto son 200pixeles que es lo que ocupa la imagen de alto
 }
 #contenedorExterno2{
     width: 100%;
-    height: 93.75rem;
+    height: 100vh;
     border-color:black;
     border-width: 1px 0px;
     border-style: solid;
@@ -142,7 +184,7 @@ el alto son 200pixeles que es lo que ocupa la imagen de alto
 }
 #contenedorExterno3{
     width: 100%;
-    height: 93.75rem;
+    height: 100vh;
     border-color:black;
     border-width: 1px 0px;
     border-style: solid;
@@ -190,6 +232,7 @@ footer{
     border-color:black;
     border-width: 1px 0px;
     border-style: solid;
+    display: none;
 
 }
 footer div{
